--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -18,7 +18,7 @@ export const meta = {
     id: 'tripleten',
     title: 'TripleTen',
     description: 'A few bits from my work at TripleTen, an AI-powered tech education platform',
-    image: 'ui.png',
+    image: 'og.png',
     link: 'https://tripleten.com',
     period: '2022-2025'
 }
@@ -138,11 +138,11 @@ Over time, PostHog became the core analytics and experimentation platform for th
 
 One of the things I truly loved at TripleTen was shaping its visual language and bringing the brand’s voice into the interface. During my time there, I was the key maintainer of our shared design system.
 
-<div className="wide-block max-lg:hidden">![Design system](/tripleten/design-system-wide.png)</div>
-<div className="lg:hidden">![Design system](/tripleten/design-system-square.png)</div>
+<div className="wide-block max-lg:hidden">![Design system](/tripleten/design-system/wide.png)</div>
+<div className="lg:hidden">![Design system](/tripleten/design-system/square.png)</div>
 <div className="caption">TripleTen design system excerpts</div>
 
-One of the hardest challenges was keeping everything consistent and helping the other 25 designers across product, brand, and curriculum teams align and contribute effectively to the shared system. To make it easier for everyone, the system was structured as a tree of modules—from broad foundations to more specific UI libraries, brand components, and curriculum guidelines. These Figma files and the shared approach behind them took shape through regular design critiques and a steady design-system routine.
+One of the hardest challenges was keeping everything consistent and helping the other 25 designers across product, brand, and curriculum teams align and contribute effectively to the shared system. To make it easier for everyone, the system was structured as a tree of modules—from broad foundations to more specific UI libraries, brand components, and curriculum guidelines. These Figma files and the shared approach behind them took shape through regular design critiques and a steady design system routine.
 
 The collaboration between different design functions was crucial in shaping TripleTen’s unique tone of voice. I always wanted learning to feel approachable, supportive, and not boring. That’s why our ToV showed up not only in the copy but also in the small details of the interface.
 
