--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -41,23 +41,21 @@ TripleTen is a personalized learning service that takes you from gaining skills 
 </div>
 <span className="caption">TripleTen learning platform</span>
 
-The product was born in the early 2020s—a time of economic uncertainty, especially in the US. For many, moving into tech became a path to stability and a better life. TripleTen became the best way to learn a tech job for people with busy lives, thanks to its mix of full control over the student experience, strong learning design, and deep expertise in tech and AI.
+The product was born in the early 2020s, when switching to tech became a real path to stability and a better life for many. TripleTen became the best way to learn a tech job for people with busy lives, thanks to its mix of full control over the student experience, strong learning design, and deep expertise in tech and AI.
 
-I joined TripleTen as part of the founding team and spent four years shaping the product design and adapting it to the needs of demanding US students. Over time, I took on broader design leadership across the organization—supporting other designers while keeping my sleeves firmly rolled up.
+I joined TripleTen as part of the founding team and spent four years shaping its product design. Over time, I took on broader design leadership across the organization—supporting other designers while keeping my sleeves firmly rolled up.
 
 ## Dot<img src="/tripleten/dot/icon.svg" alt="Dot" className="inline h-10 pl-1" />, your AI buddy
 
-One of the biggest challenges in online learning is the lack of real-time support. In a classroom or even on Zoom, it’s easy to ask a question and get help right away. But when you’re studying online, that instant feedback is missing. That’s why TripleTen made human support—tutors, learning coaches, and community—one of its main priorities.
+One of the biggest challenges in online learning is the lack of real-time support. That’s why tutors, learning coaches, and the community became one of TripleTen’s core strengths. But keeping that level of depth and quality consistent is really hard once you start scaling.
 
-The problem is that support is often either fast but shallow (like a quick reply from a support agent) or deep but slow (like a tutor’s detailed explanation). And keeping depth and quality consistent is especially hard at scale.
-
-AI changed that. In 2025, with the rise of reasoning models and agent frameworks, smart and responsive AI tutors suddenly became possible. That’s when Dot was born.
+AI changed that. In 2025, with the rise of reasoning models and agents, smart and responsive AI tutors suddenly became possible. That’s how Dot was born.
 
 <HiDot />
 
-Dot started as a quick experiment on our Discord server and stayed there for almost a year. That time showed us how much value students got from it, so we decided to turn it into a core part of the learning platform.
+Dot started as a quick experiment on our Discord server. Over the year, we saw how much students loved it, so we decided to turn it into a core part of the platform.
 
-We began where students struggled the most—coding projects. It was also where we expected the most feedback. That’s why the first chat we built lived inside the VS Code extension.
+We decided to add support where students struggled the most—in coding projects. So we built the chat as a VS Code extension first.
 
 <div className="wide-block">![VS Code](/tripleten/dot/vs-code.png)</div>
 
