Cut some noise [2]

--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -59,15 +59,15 @@ We decided to add support where students struggled the most—in coding projects
 
 <div className="wide-block">![VS Code](/tripleten/dot/vs-code.png)</div>
 
-From the start, we took a “ship to learn” approach—built the simplest possible chat, added many events and feedback loops, and started watching what students asked, when, and how. A huge part of this was powered by PostHog’s toolkit for surveys, analytics, session replays, and feature flags, which we used heavily.
+From the start, we shipped to learn. We built a simple chat, added events and feedback loops, and watched what, when, and how students asked. (A good moment to shout out PostHog’s surveys, analytics, session replays, and feature flags.)
 
-After the launch, we saw heavy usage of the extension, confirming our hypothesis: this kind of help was genuinely valuable, and the entry point worked. Our next step was to identify other key moments where students needed support most and make Dot easy to access there.
+Very soon after launch, we saw heavy usage of the extension, confirming that the entry point was right and this kind of help was genuinely valuable. Our next step was to identify other key moments where students needed support most.
 
-Over the next six months, together with a small team of engineers and researchers, we integrated Dot into the platform and iterated on its conversational experience, tools, memory, voice mode, and various entry points across the learning journey.
+Over the next six months, together with a small team of engineers and researchers, we iterated on Dot’s conversational experience, tools, memory, voice mode, and these entry points across the whole learning journey.
 
 <div className="wide-block">![Dot on the platform](/tripleten/dot/platform.png)</div>
 
-We managed to make Dot more than just another AI bot—it became a real buddy on the platform that helps right when you need it. Our A/B test clearly showed the impact: Dot’s support increased project submissions by 34%. It quickly became the platform’s most-used feature, with 47% MAU and over 200k messages sent each month. Equally important, Dot’s lively personality and tone of voice brought widespread student love, tons of positive feedback, and a 91% satisfaction rate.
+We managed to make Dot feel like a real buddy who shows up right when you need help. The impact was clear in our A/B tests: Dot increased project submissions by 34%. It quickly became the most-used support tool, with 47% MAU and over 200k messages sent each month. Equally important, Dot’s lively personality and tone of voice brought widespread love, tons of positive feedback, and a 91% satisfaction rate.
 
 ![Feedback](/tripleten/dot/feedback.png)
 
