Cut some noise [5]

--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -117,13 +117,13 @@ One of the things I truly loved at TripleTen was shaping its visual language and
 <div className="lg:hidden">![Design system](/tripleten/design-system/square.png)</div>
 <div className="caption">TripleTen design system excerpts</div>
 
-One of the hardest challenges was keeping everything consistent and helping the other 25 designers across product, brand, and curriculum teams align and contribute effectively to the shared system. To make it easier for everyone, the system was structured as a tree of modules—from broad foundations to more specific UI libraries, brand components, and curriculum guidelines. These Figma files and the shared approach behind them took shape through regular design critiques and a steady design system routine.
+One of the hardest challenges was keeping everything consistent and helping the other 25 designers across product, brand, and curriculum teams align and contribute effectively to the shared system. To make things easier, I broke it into several modules—from broad foundations to more specific UI libraries, brand components, and curriculum guidelines. These Figma files, and the shared approach behind them, took shape through regular design critiques and a steady design-system routine.
 
-The collaboration between different design functions was crucial in shaping TripleTen’s unique tone of voice. I always wanted learning to feel approachable, supportive, and not boring. That’s why our ToV showed up not only in the copy but also in the small details of the interface.
+This collaboration between different design functions was crucial in shaping TripleTen’s unique tone of voice. I always wanted learning to feel approachable, supportive, and not boring. That’s why our ToV showed up not only in the copy but also in the smallest details of the interface.
 
 <div className="wide-block">![UI](/tripleten/ui.png)</div>
 
-In my last year, I took this further by stepping into design engineering, shaping not just visuals but also interactions and polish. My code contributions added up to 47 PRs across new features, polish, papercuts, and analytics.
+In my last year, I took this further by stepping into design engineering, shaping not just visuals but also interactions and polish. My code contributions added up to 47 PRs across new features, papercuts, and analytics.
 
 ## Observability
 
