--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -1,8 +1,8 @@
 import {
-    BrowserContainer,
-    BrowserContainerGallery,
-    BrowserContainerImage,
-    BrowserContainerVideo
+    MacintoshContainer,
+    MacintoshContainerGallery,
+    MacintoshContainerImage,
+    MacintoshContainerVideo
 } from '@/components/browser-container'
 import { buildArticleMetadata } from '@/lib/metadata'
 
@@ -28,7 +28,7 @@ export const metadata = buildArticleMetadata(meta)
 TripleTen is a personalized learning service that takes you from gaining skills to employment. Named by [Fortune](https://fortune.com/education/articles/best-software-engineering-bootcamps/) as the best overall tech bootcamp in the US, it has over 20k monthly active learners across the US and Latin America. TripleTen is a part of Nebius, a $20B NASDAQ-listed AI cloud company. This is also the funniest place I’ve ever worked.
 
 <div className="wide-block">
-    <BrowserContainerGallery
+    <MacintoshContainerGallery
         title="Platform"
         items={[
             { src: '/tripleten/showcase/home.png', label: 'Home' },
@@ -80,7 +80,7 @@ In the past, these projects required installing a bunch of external tools, while
 So we decided to bring these tools into the platform. Today, most of the professional tools students use (VS Code, JupyterLab, Google Sheets, Figma, and more) are web-based, which made it technically possible.
 
 <div className="wide-block">
-    <BrowserContainerImage
+    <MacintoshContainerImage
         src="/tripleten/pop/default.png"
         alt="Project on the platform"
         aspectRatio="16 / 9"
@@ -96,7 +96,7 @@ Another major challenge was simplifying the stages model. Project workflows used
 It was a fun design project but also a big technical one—especially when it came to making the platform and external workspaces work seamlessly together. With a tight-knit team of engineers, we built the first VS Code version in three months, but the full rollout, iterations, and support for more tools took another year.
 
 <div className="wide-block">
-    <BrowserContainerGallery
+    <MacintoshContainerGallery
         title="Projects"
         items={[
             { src: '/tripleten/pop/vscode.png', label: 'VS Code' },
@@ -131,7 +131,7 @@ In my last year at TripleTen, one of the big things I focused on was helping us 
 
 When I started researching analytics tools, one clearly stood out—PostHog. Beyond all the hog fun, it turned out to be a powerful and flexible observability toolkit.
 
-<BrowserContainerImage src="/tripleten/posthog.png" alt="PostHog UI" aspectRatio="16 / 9" />
+<MacintoshContainerImage src="/tripleten/posthog.png" alt="PostHog UI" aspectRatio="16 / 9" />
 <span className="caption">PostHog toolset</span>
 
 I set up and maintained the PostHog integration from early experiments to a full rollout across all platform surfaces. It was an interesting challenge because it combined setting up structure inside PostHog, maintaining integration code, resolving issues, and driving awareness and adoption across the company.
@@ -158,7 +158,7 @@ I started in a small engineering team focused on the platform. Later I took on p
 
 Design in TripleTen was also very diverse. We were organized into three pillars: communication, product, and curriculum design. All treating design as a glue, we collaborated closely, shared a visual guideline, design system, and processes. I’m proud I helped this community of bright folks grow—supporting with rituals, tooling, strategy, and hiring.
 
-<BrowserContainerImage src="/tripleten/team/designers.jpg" alt="Designers" />
+<MacintoshContainerImage src="/tripleten/team/designers.jpg" alt="Designers" />
 <div className="caption">Long-distance relationships sometimes work</div>
 
 <div className="mt-24 text-4xl font-medium max-xl:text-3xl max-sm:mt-16 max-sm:text-2xl">
